@@ -1,3 +1,7 @@
+Thu May 21 10:59:43 2015  Koichi Sasada  <ko1@atdot.net>
+
+	* proc.c (method_proc): rename to method_to_proc.
+
 Thu May 21 10:51:54 2015  Jake Worth  <jakeworth82@gmail.com>
 
 	* io.c (rb_f_select): [DOC] Fixes for grammar and style.
